@@ -7,6 +7,7 @@ version <next>:
 - PGX decoder
 - chromanr video filter
 - VDPAU accelerated HEVC 10/12bit decoding
+- kmsgrab GetFB2 format_modifier, if user doesnt specify
 
 
 version 4.3:
